[gd_scene load_steps=4 format=3 uid="uid://du048v7b7gi4n"]

[ext_resource type="Script" uid="uid://caha4bew5wg3m" path="res://HeroUIConnections.gd" id="1"]
[ext_resource type="Script" uid="uid://cfhtg52m73d44" path="res://Hero.gd" id="2"]

[node name="HeroUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopStats" type="Panel" parent="MainContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 0

[node name="StatsBackground" type="ColorRect" parent="MainContainer/TopStats"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.25, 0.9)

[node name="StatsContainer" type="HBoxContainer" parent="MainContainer/TopStats"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthStat" type="HBoxContainer" parent="MainContainer/TopStats/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HealthIcon" type="Label" parent="MainContainer/TopStats/StatsContainer/HealthStat"]
layout_mode = 2
text = "‚ù§Ô∏è"
vertical_alignment = 1

[node name="HealthValue" type="Label" parent="MainContainer/TopStats/StatsContainer/HealthStat"]
layout_mode = 2
text = "4298"
vertical_alignment = 1

[node name="AttackStat" type="HBoxContainer" parent="MainContainer/TopStats/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AttackIcon" type="Label" parent="MainContainer/TopStats/StatsContainer/AttackStat"]
layout_mode = 2
text = "‚öîÔ∏è"
vertical_alignment = 1

[node name="AttackValue" type="Label" parent="MainContainer/TopStats/StatsContainer/AttackStat"]
layout_mode = 2
text = "1478"
vertical_alignment = 1

[node name="DefenseStat" type="HBoxContainer" parent="MainContainer/TopStats/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DefenseIcon" type="Label" parent="MainContainer/TopStats/StatsContainer/DefenseStat"]
layout_mode = 2
text = "üõ°Ô∏è"
vertical_alignment = 1

[node name="DefenseValue" type="Label" parent="MainContainer/TopStats/StatsContainer/DefenseStat"]
layout_mode = 2
text = "131"
vertical_alignment = 1

[node name="ManaStat" type="HBoxContainer" parent="MainContainer/TopStats/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ManaIcon" type="Label" parent="MainContainer/TopStats/StatsContainer/ManaStat"]
layout_mode = 2
text = "üíô"
vertical_alignment = 1

[node name="ManaValue" type="Label" parent="MainContainer/TopStats/StatsContainer/ManaStat"]
layout_mode = 2
text = "1350"
vertical_alignment = 1

[node name="HeroContent" type="ScrollContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContentContainer" type="VBoxContainer" parent="MainContainer/HeroContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EquipmentArea" type="Control" parent="MainContainer/HeroContent/ContentContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2

[node name="CenterArea" type="VBoxContainer" parent="MainContainer/HeroContent/ContentContainer/EquipmentArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="EquipmentGrid" type="GridContainer" parent="MainContainer/HeroContent/ContentContainer/EquipmentArea/CenterArea"]
layout_mode = 2
columns = 3

[node name="Slot_Head" type="Panel" parent="MainContainer/HeroContent/ContentContainer/EquipmentArea/CenterArea/EquipmentGrid"]
layout_mode = 2

[node name="Slot_Neck" type="Panel" parent="MainContainer/HeroContent/ContentContainer/EquipmentArea/CenterArea/EquipmentGrid"]
layout_mode = 2

[node name="Slot_Back" type="Panel" parent="MainContainer/HeroContent/ContentContainer/EquipmentArea/CenterArea/EquipmentGrid"]
layout_mode = 2

[node name="Slot_Weapon" type="Panel" parent="MainContainer/HeroContent/ContentContainer/EquipmentArea/CenterArea/EquipmentGrid"]
layout_mode = 2

[node name="Slot_Armor" type="Panel" parent="MainContainer/HeroContent/ContentContainer/EquipmentArea/CenterArea/EquipmentGrid"]
layout_mode = 2

[node name="Slot_Shield" type="Panel" parent="MainContainer/HeroContent/ContentContainer/EquipmentArea/CenterArea/EquipmentGrid"]
layout_mode = 2

[node name="Slot_Gloves" type="Panel" parent="MainContainer/HeroContent/ContentContainer/EquipmentArea/CenterArea/EquipmentGrid"]
layout_mode = 2

[node name="Slot_Boots" type="Panel" parent="MainContainer/HeroContent/ContentContainer/EquipmentArea/CenterArea/EquipmentGrid"]
layout_mode = 2

[node name="Slot_Ring" type="Panel" parent="MainContainer/HeroContent/ContentContainer/EquipmentArea/CenterArea/EquipmentGrid"]
layout_mode = 2

[node name="Connections" type="Control" parent="MainContainer/HeroContent/ContentContainer/EquipmentArea/CenterArea"]
layout_mode = 2
script = ExtResource("1")

[node name="BottomNav" type="Panel" parent="MainContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 0

[node name="NavBackground" type="ColorRect" parent="MainContainer/BottomNav"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.9)

[node name="NavContainer" type="VBoxContainer" parent="MainContainer/BottomNav"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopRow" type="HBoxContainer" parent="MainContainer/BottomNav/NavContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CombatBtn" type="Button" parent="MainContainer/BottomNav/NavContainer/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "‚öîÔ∏è Combat"
flat = true

[node name="EquipmentBtn" type="Button" parent="MainContainer/BottomNav/NavContainer/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "üõ°Ô∏è Equipment"
flat = true

[node name="UpgradesBtn" type="Button" parent="MainContainer/BottomNav/NavContainer/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "üíé Upgrades"
flat = true

[node name="InventoryBtn" type="Button" parent="MainContainer/BottomNav/NavContainer/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "üéí Inventory"
flat = true

[node name="SettingsBtn" type="Button" parent="MainContainer/BottomNav/NavContainer/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "‚öôÔ∏è Settings"
flat = true

[node name="BottomRow" type="HBoxContainer" parent="MainContainer/BottomNav/NavContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HomeBtn" type="Button" parent="MainContainer/BottomNav/NavContainer/BottomRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "üè† Home"
flat = true

[node name="HeroBtn" type="Button" parent="MainContainer/BottomNav/NavContainer/BottomRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "üë§ Hero"
flat = true

[node name="ProgressBtn" type="Button" parent="MainContainer/BottomNav/NavContainer/BottomRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "üìà Progress"
flat = true

[node name="QuestsBtn" type="Button" parent="MainContainer/BottomNav/NavContainer/BottomRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "üéØ Quests"
flat = true

[node name="ShopBtn" type="Button" parent="MainContainer/BottomNav/NavContainer/BottomRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "üè™ Shop"
flat = true

[node name="MoreBtn" type="Button" parent="MainContainer/BottomNav/NavContainer/BottomRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "‚ãØ More"
flat = true
